# cubecl

./: Cargo.toml
crates/cubecl/: Cargo.toml
crates/cubecl-common/: build.rs
crates/cubecl-common/src/device/handle/: channel.rs
crates/cubecl-common/src/quant/: scheme.rs
crates/cubecl-core/: Cargo.toml
crates/cubecl-cpp/src/metal/: dialect.rs
crates/cubecl-cpp/src/shared/: base.rs  kernel.rs
crates/cubecl-cuda/src/: runtime.rs
crates/cubecl-cuda/src/compute/: command.rs  server.rs  stream.rs
crates/cubecl-metal4/: Cargo.toml
crates/cubecl-metal4/src/: device.rs  imp.rs  lib.rs  runtime.rs  server.rs  stax_lane.rs  storage.rs
crates/cubecl-metal4/tests/: cube_launch.rs  qa_gemv.rs  square.rs
crates/cubecl-opt/src/analyses/: liveness.rs
crates/cubecl-runtime/: Cargo.toml  build.rs
crates/cubecl-runtime/src/: client.rs
crates/cubecl-runtime/src/config/: autotune.rs  base.rs
crates/cubecl-runtime/src/memory_management/: memory_manage.rs
crates/cubecl-runtime/src/server/: base.rs
crates/cubecl-runtime/src/tune/: local.rs  tune_benchmark.rs  tuner.rs
crates/cubecl-std/src/quant/: dequantize.rs  view.rs
crates/cubecl-std/src/tensor/view/: launch.rs
crates/cubecl-std/src/tests/view/: quantized.rs
crates/cubecl/src/: lib.rs
