[package]
name = "cubecl-metal4"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native Metal 4 runtime for CubeCL (no wgpu): MTL4 command queue, MTLBuffer storage, MSL pipelines, and per-dispatch GPU timestamps."
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-metal4"
readme.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = []

# Everything here is Apple/Metal-only. On other targets the crate is an empty
# lib so the workspace (`members = ["crates/*"]`) still builds on Linux/CUDA boxes.
[target.'cfg(target_vendor = "apple")'.dependencies]
cubecl-common = { path = "../cubecl-common", version = "=0.11.0-pre.1", default-features = false, features = [
    "compilation-cache",
    "hash",
    "std",
    "serde",
] }
cubecl-core = { path = "../cubecl-core", version = "=0.11.0-pre.1", default-features = false }
cubecl-cpp = { path = "../cubecl-cpp", version = "=0.11.0-pre.1", default-features = false, features = [
    "metal",
] }
cubecl-runtime = { path = "../cubecl-runtime", version = "=0.11.0-pre.1", default-features = false, features = [
    "channel-mutex",
    "std",
] }
bytemuck = { workspace = true }
half = { workspace = true }
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-metal = { version = "0.3.2", features = [
  "MTLAllocation",
  "MTLBuffer",
  "MTLCommandBuffer",
  "MTLComputePipeline",
  "MTLDevice",
  "MTLEvent",
  "MTLGPUAddress",
  "MTLLibrary",
  "MTLResidencySet",
  "MTLResource",
  "MTL4ArgumentTable",
  "MTL4CommandAllocator",
  "MTL4CommandBuffer",
  "MTL4CommandEncoder",
  "MTL4CommandQueue",
  "MTL4CommitFeedback",
  "MTL4ComputeCommandEncoder",
  "MTL4Counters",
  "block2",
  "dispatch2",
] }
block2 = "0.6"

[target.'cfg(target_vendor = "apple")'.dev-dependencies]
# `export_tests` exposes cubecl's golden-vector kernel suite (reduce, softmax,
# matmul, normalization, …) so `testgen_all!` runs it against Metal4 — this is
# how we bisect which op diverges/NaNs vs the wgpu/cuda oracle.
cubecl-core = { path = "../cubecl-core", version = "=0.11.0-pre.1", features = [
    "export_tests",
] }
cubecl-std = { path = "../cubecl-std", version = "=0.11.0-pre.1", features = [
    "export_tests",
] }
bytemuck = { workspace = true }
half = { workspace = true }
paste = { workspace = true }
pretty_assertions = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
